# Visibility-aware-Cooperative-Swarm-Tracking

./: LICENSE  README.md
src/swarm_tracking/swarm_sim/Utils/odom_visualization/: package.xml
src/swarm_tracking/swarm_sim/Utils/odom_visualization/src/: odom_visualization.cpp
src/swarm_tracking/swarm_sim/Utils/pose_utils/: package.xml
src/swarm_tracking/swarm_sim/Utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/swarm_tracking/swarm_sim/Utils/rviz_plugins/: package.xml
src/swarm_tracking/swarm_sim/local_sensing/: package.xml
src/swarm_tracking/swarm_sim/local_sensing/include/: opengl_sim.hpp  tools_kd_hash.hpp
src/swarm_tracking/swarm_sim/local_sensing/include/FOV_Checker/: FOV_Checker.cpp
src/swarm_tracking/swarm_sim/local_sensing/include/ikd-Tree/: ikd_Tree.cpp
src/swarm_tracking/swarm_sim/local_sensing/src/: opengl_render_node.cpp  pcl_depth.cpp  pointcloud_render_node.cpp
src/swarm_tracking/swarm_sim/map_generator/: CMakeLists.txt  package.xml
src/swarm_tracking/swarm_sim/map_generator/resource/: ssdf_example_scene.pcd
src/swarm_tracking/swarm_sim/map_generator/src/: map_publisher.cpp
src/swarm_tracking/swarm_sim/so3_controller/: package.xml
src/swarm_tracking/swarm_sim/so3_quadrotor/: package.xml
src/swarm_tracking/tracking_planner/ciri/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/ciri/include/ciri_solver/: ciri.h
src/swarm_tracking/tracking_planner/ciri/include/ciri_utils/: common_type_name.h  ellipsoid.h  geometry_utils.h  lbfgs.h  mvie.h  polytope.h  quickhull.h  sdlp.h
src/swarm_tracking/tracking_planner/ciri/src/ciri_solver/: ciri.cpp
src/swarm_tracking/tracking_planner/ciri/src/ciri_utils/: common_type_name.cpp  ellipsoid.cpp  geometry_utils.cpp  lbfgs.cpp  mvie.cpp  polytope.cpp  quickhull.cpp  sdlp.cpp
src/swarm_tracking/tracking_planner/detection/target_detection/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/detection/target_detection/include/target_detection/: FEC.h  esikf_tracker.hpp  uav_detector.hpp
src/swarm_tracking/tracking_planner/detection/target_detection/src/: target_detector_node.cpp  uav_detector.cpp
src/swarm_tracking/tracking_planner/path_searching/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/path_searching/include/path_searching/: astar_search.hpp  kino_search.hpp  prediction.hpp
src/swarm_tracking/tracking_planner/path_searching/src/: kino_search.cpp
src/swarm_tracking/tracking_planner/plan_env/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/plan_env/include/plan_env/: vis_sdf.h
src/swarm_tracking/tracking_planner/plan_env/src/: vis_sdf.cpp
src/swarm_tracking/tracking_planner/plan_manage/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/plan_manage/config/: param_ssdf_example.yaml  param_tracking_four.yaml  param_tracking_three.yaml  rogmap_forest.yaml  rogmap_ssdf_example.yaml  rogmap_target.yaml  rviz_ssdf_scene.rviz  rviz_swarm_four.rviz  rviz_swarm_three.rviz
src/swarm_tracking/tracking_planner/plan_manage/include/plan_manage/: SFCgen_ciri.hpp  cpu_memory_query.h  geoutils.hpp  quickhull.hpp  sdlp.hpp  st_replan_fsm.h  target_replan_fsm.h
src/swarm_tracking/tracking_planner/plan_manage/launch/: ssdf_example.launch  swarm_tracking_four_heter.launch  swarm_tracking_three_mid360.launch
src/swarm_tracking/tracking_planner/plan_manage/launch/sim_tracking/: lidar_target_drone.xml  lidar_tracker_drone.xml  sim_target_drone.xml  sim_tracker_drone.xml
src/swarm_tracking/tracking_planner/plan_manage/src/: SFCgen_ciri.cpp  ssdf_example_node.cpp  st_planner_node.cpp  st_replan_fsm.cpp  target_planner_node.cpp  target_replan_fsm.cpp  traj_server.cpp
src/swarm_tracking/tracking_planner/rog_map/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/rog_map/include/ikd_tree/: ikd_Tree.cpp  ikd_Tree.h
src/swarm_tracking/tracking_planner/rog_map/include/multi_map_manage/: hilbert_2d.hpp  multi_map_manager.h
src/swarm_tracking/tracking_planner/rog_map/include/rog_map/: config.h  free_cnt_map.h  inf_map.h  prob_map.h  rog_map.h  scope_timer.h  sliding_map.h
src/swarm_tracking/tracking_planner/rog_map/include/rog_utils/: raycaster.h
src/swarm_tracking/tracking_planner/rog_map/src/multi_map_manage/: multi_map_manager.cpp
src/swarm_tracking/tracking_planner/rog_map/src/rog_map/: config.cpp  inf_map.cpp  prob_map.cpp  rog_map.cpp  scope_timer.cpp  sliding_map.cpp
src/swarm_tracking/tracking_planner/rog_map/src/rog_utils/: raycaster.cpp
src/swarm_tracking/tracking_planner/swarm_bridge/swarm_msgs/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/swarm_bridge/swarm_msgs/msg/: ChunkStamps.msg  GlobalExtrinsic.msg  GlobalExtrinsicStatus.msg  LocalMapData.msg  LocalMapList.msg  MincoTraj.msg  QuadStatePub.msg  TargetObsrv.msg  TeammateIDList.msg
src/swarm_tracking/tracking_planner/swarm_bridge/udp_bridge/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/swarm_bridge/udp_bridge/include/: color.h  so3_math.h
src/swarm_tracking/tracking_planner/swarm_bridge/udp_bridge/include/udp_bridge/: protocol.h
src/swarm_tracking/tracking_planner/swarm_bridge/udp_bridge/launch/: udp_unicast.launch
src/swarm_tracking/tracking_planner/swarm_bridge/udp_bridge/src/: Teammate.hpp  udp_unicast.cpp
src/swarm_tracking/tracking_planner/traj_opt/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/traj_opt/include/optimizer_corridor/: flatmap.hpp  geoutils.hpp  lbfgs_raw.hpp  minco.hpp  root_finder.hpp  sdlp.hpp  traj_optimizer.h
src/swarm_tracking/tracking_planner/traj_opt/src/: traj_optimizer.cpp  traj_optimizer_cone.cpp  traj_optimizer_omni.cpp  traj_optimizer_target.cpp
src/swarm_tracking/tracking_planner/traj_utils/: CMakeLists.txt  package.xml
src/swarm_tracking/tracking_planner/traj_utils/include/traj_utils/: planning_visualization.h  poly_traj_utils.hpp  root_finder.hpp  scope_timer.hpp  (+2 more)
src/swarm_tracking/tracking_planner/traj_utils/msg/: PolyTraj.msg
src/swarm_tracking/tracking_planner/traj_utils/src/: planning_visualization.cpp
