<?xml version="1.0"?>
<package format="2">
  <name>so3_controller</name>
  <version>0.0.0</version>
  <description>The so3_controller package for paper "Visibility-aware
    Cooperative Aerial Tracking with Decentralized LiDAR-based Swarm Robots"</description>

  <maintainer email="visibility-aware-cooperative-tracking@anonymous.anonymous">anonymous</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
