cmake_minimum_required(VERSION 2.8.3)
project(ciri)

add_compile_options(-std=c++14)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -fPIC")
add_compile_options(-DQT_NO_VERSION_TAGGING)
add_definitions(-DROOT_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/\")

find_package(catkin REQUIRED COMPONENTS
        roscpp
        std_msgs
        pcl_ros
        geometry_msgs
        nav_msgs
        message_generation
        quadrotor_msgs
        )


catkin_package(
        INCLUDE_DIRS
        LIBRARIES ciri
        CATKIN_DEPENDS roscpp rospy std_msgs
        #  DEPENDS system_lib
)
find_package(Eigen3 REQUIRED)
find_package(PCL REQUIRED)
include_directories(
        SYSTEM
        include
        ../../../devel/include
        ${catkin_INCLUDE_DIRS}
        ${Eigen3_INCLUDE_DIRS}
        ${PCL_INCLUDE_DIRS}
)

set(THIRD_PARTY
        ${catkin_LIBRARIES}
        ${PCL_LIBRARIES}
        )



file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h include/*.hpp include/*.cpp)
add_library(ciri STATIC ${srcs}
        )
target_include_directories(ciri PUBLIC include)
target_link_libraries(ciri PUBLIC
        ${THIRD_PARTY}
        )