<?xml version="1.0"?>
<package format="2">
    <name>swarm_msgs</name>
    <version>0.0.0</version>
    <description>The swarm_msgs package for paper "Visibility-aware
  Cooperative Aerial Tracking with Decentralized LiDAR-based Swarm Robots"</description>

    <maintainer email="visibility-aware-cooperative-tracking@anonymous.anonymous">anonymous</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
