<?xml version="1.0"?>
<package format="2">
    <name>udp_bridge</name>
    <version>0.0.0</version>
    <description>The udp_bridge package for paper "Visibility-aware
    Cooperative Aerial Tracking with Decentralized LiDAR-based Swarm Robots"</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="visibility-aware-cooperative-tracking@anonymous.anonymous">anonymous</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>swarm_msgs</build_depend>
    <build_depend>traj_opt</build_depend>

    <build_depend>roslib</build_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>swarm_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>traj_opt</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
